# scoop

./: AGENTS.md  Makefile  README.md  slophammer.yml
.github/workflows/: ci.yml  go-quality.yml
.husky/: pre-commit
backend/: .golangci.yml
backend/internal/app/: app.go  app_test.go  articles.go  collections.go  command_runtime.go  daemon.go  daemon_test.go  default_admin.go  default_admin_test.go  delete.go  delete_test.go  digest.go  format_command.go  health.go  health_test.go  ingest.go  ingest_test.go  integration_test.go  list_window.go  parser_more_test.go  person_identities.go  person_identities_test.go  pipeline.go  pipeline_test.go  quality_gates_test.go  read_helpers.go  read_pool.go  render_test.go  restore.go  search.go  serve.go  serve_test.go  stats.go  stories.go  story_detail.go  story_detail_test.go  tags.go  tags_test.go  target_action.go  translate.go  (+6 more)
backend/internal/auth/: password_test.go
backend/schema/: validator.go  validator_test.go
backend/scripts/: check-go-coverage.sh  check-go-crap.sh  check-go-dry.sh  check-go-mutation.sh
docs/: 2026-02-17-cross-day-dedup-proposal.md  2026-05-11-tags-and-temporary-permissions.md  2026-05-12-interest-scale-tags.md  2026-05-12-title-action-primitives.md  2026-05-12-viewer-autoscroll-reader.md  2026-05-13-article-person-identities.md  2026-05-13-identity-ref-scheme.md
embedding-service/: embed.py  main.py  pyproject.toml
embedding-service/tests/: test_main.py
frontend/: tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts  viewerSearch.ts
scripts/: bootstrap.sh
(+111 files in other folders)
