[project]
name = "embedding-service"
version = "0.1.0"
description = "Local embedding service using Qwen3-Embedding-8B on NVIDIA Jetson AGX Thor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-cudnn-cu12>=9.19.0.56",
    "sympy>=1.14.0",
    "transformers",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["torch", "transformers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
